fix: fixed Authority and Authentication documentation